# 10-Identity-Management-Compact-ExpressOpenApi-NLayer/identitymanagementcompact-microservice/api/controllers/auth.controller.js
@@ -1,0 +1,30 @@
+// auth.controller.js
+
+const log = require('../infrastructure/logger/applicationLogger.gateway');
+const authService = require('../services/auth.service');
+
+// //////////////////////////////////////////////////////////////////////////////
+// CONSTANTS & PROPERTIES
+// //////////////////////////////////////////////////////////////////////////////
+
+const MODULE_NAME = '[Auth Controller]';
+
+// //////////////////////////////////////////////////////////////////////////////
+// PUBLIC METHODS
+// //////////////////////////////////////////////////////////////////////////////
+
+async function authenticate(req, res) {
+  const { username, passwd } = req.headers;
+  log.debug(`${MODULE_NAME}:${authenticate.name} (IN) -> username: ${username}, passwd: ${passwd}`);
+
+  const token = await authService.authenticate(username, passwd);
+
+  const result = { token };
+
+  log.debug(`${MODULE_NAME}:${authenticate.name} (OUT) -> result: ${JSON.stringify(result)}`);
+  res.json(result);
+}
+
+module.exports = {
+  authenticate,
+};
